USEID-572: Fix top area of the widget
The top area was out of view, we need to specifically add margin top to incompatible page

--- a/src/main/resources/static/css/widget.css
+++ b/src/main/resources/static/css/widget.css
@@ -167,6 +167,9 @@ h2 {
 }
 
 /*INCOMPATIBLE PAGE*/
+.incompatible {
+    margin-top: 65px;
+}
 .incompatible-notification__wrapper {
     background-color: #f2f6f8;
     color: #333;
